--- a/css/style.css
+++ b/css/style.css
@@ -3635,8 +3635,8 @@ body {
 .description__body::-webkit-scrollbar-track,
 .comments__text::-webkit-scrollbar-track,
 .column-author__text::-webkit-scrollbar-track {
-  background-color: #140b0b;
-  border-radius: 50%;
+  background-color: #b9b9b9;
+  border-radius: 2px;
 }
 
 .description__body::-webkit-scrollbar-thumb,
